--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt -y install build-essential tree
-        sudo cpan install Data::Table::Text
+        sudo cpan install Data::Edit::Xml Data::Table::Text Dita::GBStandard
 
     - name: Test
       run: |
