--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: InstallDitaGBStandard
       run: |
-        sudo cpan install Dita::GBStandard
+        sudo cpan install Dita::GB::Standard
 
 
 
